--- a/project_resume/resume.html
+++ b/project_resume/resume.html
@@ -12,7 +12,7 @@
 </head>
 <body> 
     <div class="container">
-        <header><div class="p-3 mb-2 bg-secondary text-white text-center"><h5>Резюме</h5></div></header>
+      <h5 class="p-3 mb-2 bg-secondary text-white text-center">Резюме</h5>
         <!-- Фото, ФИО и контакты -->
         <div class="row">
           <div class="col-3">
@@ -138,7 +138,7 @@
                   </div>
             </div>  
         </div>
-        <footer><p><div class="p-3 mb-2 bg-secondary text-white text-center">Москва, 2020</div></p></footer>
+        <p><div class="p-3 mb-2 bg-secondary text-white text-center">Москва, 2020</div></p> 
     </div>
 </body>
 </html>
