--- a/project_resume/resume.html
+++ b/project_resume/resume.html
@@ -1,7 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
+
+<!doctype html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Резюме ИТ-специалиста">
 <title>Resume</title>
 <!-- Подключаем Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -11,8 +14,14 @@
 <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
 </head>
 <body> 
+  <header class="container py-1">    
+    <div class="row">
+      <div class="col">
+        <div class = "p-3 bg-secondary text-white text-center"><h5>Резюме</h5></div>
+      </div>
+    </div>
+  </header>
     <div class="container">
-      <h5 class="p-3 mb-2 bg-secondary text-white text-center">Резюме</h5>
         <!-- Фото, ФИО и контакты -->
         <div class="row">
           <div class="col-3">
@@ -138,7 +147,13 @@
                   </div>
             </div>  
         </div>
-        <p><div class="p-3 mb-2 bg-secondary text-white text-center">Москва, 2020</div></p> 
     </div>
+    <footer class="container py-3">    
+        <div class="row">
+          <div class="col">
+            <div class = "p-3 border-top text-secondary text-center">Москва, 2020</div>
+          </div>
+        </div>
+    </footer>
 </body>
 </html>
